CosmeticsMenu adjustments
Reduced redundant code for trail buttons. Improved layout, adjusted variable names for readability.